Started add some tests :D

--- a/TDD-HamRicAnd-Project/VideoStoreBusinessLayer/VideoStoreBusinessLayer.csproj
+++ b/TDD-HamRicAnd-Project/VideoStoreBusinessLayer/VideoStoreBusinessLayer.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Customer.cs" />
+    <Compile Include="Exeptions.cs" />
     <Compile Include="Interfaces.cs" />
     <Compile Include="Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
