--- a/TDD-HamRicAnd-Project/VideoStoreBusinessLayer/VideoStoreBusinessLayer.csproj
+++ b/TDD-HamRicAnd-Project/VideoStoreBusinessLayer/VideoStoreBusinessLayer.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="Customer.cs" />
     <Compile Include="Exeptions.cs" />
+    <Compile Include="Exstensions.cs" />
     <Compile Include="Interfaces.cs" />
     <Compile Include="Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
