--- a/TDD-HamRicAnd-Project/Rentals.Test/Rentals.Test.csproj
+++ b/TDD-HamRicAnd-Project/Rentals.Test/Rentals.Test.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{61E01605-85D4-4C55-9FF7-A497D228CDCE}</ProjectGuid>
+    <ProjectGuid>{923C456D-F295-4CAA-B11C-0109BC933AAB}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>VideoStore.Test</RootNamespace>
-    <AssemblyName>VideoStore.Test</AssemblyName>
+    <RootNamespace>Rentals.Test</RootNamespace>
+    <AssemblyName>Rentals.Test</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -33,8 +33,8 @@
     <Reference Include="NSubstitute, Version=2.0.3.0, Culture=neutral, PublicKeyToken=92dd2e9066daa5ca, processorArchitecture=MSIL">
       <HintPath>..\packages\NSubstitute.2.0.3\lib\net45\NSubstitute.dll</HintPath>
     </Reference>
-    <Reference Include="nunit.framework, Version=3.6.1.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
-      <HintPath>..\packages\NUnit.3.6.1\lib\net45\nunit.framework.dll</HintPath>
+    <Reference Include="nunit.framework, Version=3.7.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
+      <HintPath>..\packages\NUnit.3.7.0\lib\net45\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -47,14 +47,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="VideoStoreTests.cs" />
+    <Compile Include="RentalsTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\VideoStoreBusinessLayer\VideoStoreBusinessLayer.csproj">
-      <Project>{1B09C6AD-3850-47E1-BE1A-9AAE79E195CD}</Project>
+      <Project>{1b09c6ad-3850-47e1-be1a-9aae79e195cd}</Project>
       <Name>VideoStoreBusinessLayer</Name>
     </ProjectReference>
   </ItemGroup>
