--- a/TDD-HamRicAnd-Project/VideoStoreBusinessLayer/VideoStoreBusinessLayer.csproj
+++ b/TDD-HamRicAnd-Project/VideoStoreBusinessLayer/VideoStoreBusinessLayer.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rental.cs" />
     <Compile Include="Rentals.cs" />
+    <Compile Include="StaticHelp.cs" />
     <Compile Include="VideoStore.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
