--- a/TDD-HamRicAnd-Project/VideoStoreUI/VideoStoreUI.csproj
+++ b/TDD-HamRicAnd-Project/VideoStoreUI/VideoStoreUI.csproj
@@ -42,11 +42,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConsoleWriter.cs" />
+    <Compile Include="MainMenu.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\VideoStoreBusinessLayer\VideoStoreBusinessLayer.csproj">
+      <Project>{1B09C6AD-3850-47E1-BE1A-9AAE79E195CD}</Project>
+      <Name>VideoStoreBusinessLayer</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
